Update package lock, handle CVE-2020-28477 (#10)
* Update package* and locales

* Pin immer to address CVE-2020-28477

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "dev:testnet": "cross-env TESTNET=true NODE_ENV=development BROWSER=none nf start -p 3000",
     "styleguide": "styleguidist server",
     "styleguide:build": "styleguidist build",
-    "locale:extract": "lingui extract",
+    "locale:extract": "lingui extract --overwrite",
     "locale:compile": "lingui compile",
     "eslint": "eslint src/**/*.[t]s{,x}",
     "format": "prettier --write src/**/*.[jt]s{,x} && eslint --fix src/**/*.[jt]s{,x}",
@@ -99,9 +99,10 @@
     "eslint-plugin-unicorn": "^27.0.0",
     "eslint-webpack-plugin": "^2.4.3",
     "foreman": "^3.0.1",
+    "immer": " >=8.0.1",
     "prettier-eslint": "^12.0.0",
     "prettier-eslint-cli": "^5.0.0",
-    "react-scripts": "4.0.1",
+    "react-scripts": "4.0.2",
     "react-styleguidist": "^11.1.5",
     "redux-devtools-extension": "^2.13.8",
     "terser-webpack-plugin": "^5.1.1",
